--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
   },
   "dependencies": {
     "color-thief-jimp": "^2.0.2",
+    "fs": "0.0.1-security",
+    "imagemagick": "^0.1.3",
+    "imagemagick-native": "^1.9.3",
     "node-fadecandy": "^2.0.1",
-    "robotjs": "^0.4.7"
+    "quantize": "^1.0.2",
+    "robotjs": "^0.4.7",
+    "screenshot-desktop": "^1.2.0"
   },
   "devDependencies": {
     "benchmark": "^2.1.4",
